--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
     "@types/node": "^17.0.16",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "eslint": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.0.7",
     "typescript": "^4.5.5"
   }
