--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.16",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "eslint": "^8.8.0",
@@ -22,7 +23,9 @@
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.0.7",
     "husky": "^7.0.0",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.3",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   }
 }
