--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Node 14",
-  "extends": "@tsconfig/node14/tsconfig.json",
   "include": [
-    "src"
+    "src",
   ],
-  "exclude": [],
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -25,7 +21,6 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
     "jsx": "react"
   }
