--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
+    "@types/faker": "^6.6.9",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.16",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -24,6 +25,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
+    "faker": "^6.6.6",
     "git-commit-msg-linter": "^4.0.7",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
