--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.5",
     "@tsconfig/node14": "^1.0.1",
-    "@types/faker": "^6.6.9",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.16",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -25,7 +25,6 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "faker": "^6.6.6",
     "git-commit-msg-linter": "^4.0.7",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
