refactor: change importe to use module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
     ],
     "rootDir": "src",
     "baseUrl": "src",
+    "paths": {
+      "@/*": [
+        "*"
+      ]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
