--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-alpha.5",
     "@tsconfig/node14": "^1.0.1",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.16",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -31,5 +32,8 @@
     "lint-staged": "^12.3.3",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "axios": "^0.25.0"
   }
 }
