--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,23 @@
 {
-  "extends": "standard-with-typescript",
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "standard-with-typescript"
+  ],
+  "plugins": [
+    "react"
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off"
-  }
+  },
+  "react/jsx-uses-react": "error",
+  "react/jsx-uses-vars": "error"
 }
