--- a/.eslintrc
+++ b/.eslintrc
@@ -16,8 +16,8 @@
   },
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
-    "@typescript-eslint/strict-boolean-expressions": "off"
-  },
-  "react/jsx-uses-react": "error",
-  "react/jsx-uses-vars": "error"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
+  }
 }
