--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "poc-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main/index.tsx",
+  "author": "Maique Rosa - POCS Family",
   "scripts": {
     "start": "webpack-dev-server --open",
     "lint-staged": "lint-staged",
@@ -13,13 +14,14 @@
     "prepare": "husky install"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-alpha.5",
     "@tsconfig/node14": "^1.0.1",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.0",
+    "@types/luxon": "^2.0.9",
+    "@types/moment": "^2.13.0",
     "@types/node": "^17.0.16",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -49,6 +51,8 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "luxon": "^2.3.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
