--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^17.0.16",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.6.0",
@@ -54,7 +55,7 @@
     "luxon": "^2.3.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-    
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
