--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
   "include": [
     "src",
   ],
+  "exclude": [
+    "node_modules",
+    "webpack",
+    "jest",
+    "cypress",
+  ],
   "compilerOptions": {
     "target": "es6",
     "allowJs": true,
